trunk/version2/y.output
   0  $accept : program $end

   1  program : definitions usercode

   2  definitions : crowd_definitions park_definition crowd_definitions

   3  crowd_definitions : crowd_definitions crowd_definition
   4                    | empty

   5  usercode : empty

   6  crowd_definition : Crowd crowd_name crowd_elements

   7  crowd_elements : SEMICOLON
   8                 | crowd_attributes

   9  crowd_attributes : crowd_attributes crowd_attribute
  10                   | empty

  11  crowd_attribute : c1
  12                  | c2
  13                  | c3
  14                  | c4

  15  c1 : Set SpendingCapacity NUMBER SEMICOLON

  16  c2 : Set Size NUMBER SEMICOLON

  17  c3 : Set EnergyLevel NUMBER SEMICOLON

  18  c4 : Set ThrillLevel NUMBER SEMICOLON

  19  park_definition : Park park_name park_elements land_definitions

  20  park_elements : SEMICOLON
  21                | park_attributes

  22  park_attributes : park_attributes park_attribute
  23                  | empty

  24  park_attribute : p1
  25                 | p2
  26                 | p3

  27  p1 : Set Admission NUMBER SEMICOLON

  28  p2 : Set Capacity NUMBER SEMICOLON

  29  p3 : Set Cost NUMBER SEMICOLON

  30  land_definitions : land_definitions land_definition
  31                   | empty

  32  land_definition : Land land_name land_attributes land_elements

  33  land_attributes : Set Location NUMBER SEMICOLON

  34  land_elements : land_elements land_element
  35                | empty

  36  land_element : attraction_definition
  37               | restaurant_definition
  38               | store_definition

  39  attraction_definition : Attraction attraction_name In land_name attraction_attributes SEMICOLON

  40  attraction_attributes : attraction_attributes attraction_attribute
  41                        | empty

  42  attraction_attribute : a1
  43                       | a2
  44                       | a3
  45                       | a4
  46                       | a5

  47  a1 : Set Cost NUMBER SEMICOLON

  48  a2 : Set Capacity NUMBER SEMICOLON

  49  a3 : Set Employees NUMBER SEMICOLON

  50  a4 : Set ThrillLevel NUMBER SEMICOLON

  51  a5 : Set EnergyLost NUMBER SEMICOLON

  52  restaurant_definition : Restaurant restaurant_name In land_name restaurant_attributes SEMICOLON

  53  restaurant_attributes : restaurant_attributes restaurant_attribute
  54                        | empty

  55  restaurant_attribute : r1
  56                       | r2
  57                       | r3
  58                       | r4
  59                       | r5

  60  r1 : Set Cost NUMBER SEMICOLON

  61  r2 : Set Capacity NUMBER SEMICOLON

  62  r3 : Set Employees NUMBER SEMICOLON

  63  r4 : Set SpendLevel NUMBER SEMICOLON

  64  r5 : Set EnergyIncrease NUMBER SEMICOLON

  65  store_definition : Store store_name In land_name store_attributes SEMICOLON

  66  store_attributes : store_attributes store_attribute
  67                   | empty

  68  store_attribute : s1
  69                  | s2
  70                  | s3
  71                  | s4

  72  s1 : Set Cost NUMBER SEMICOLON

  73  s2 : Set Capacity NUMBER SEMICOLON

  74  s3 : Set Employees NUMBER SEMICOLON

  75  s4 : Set SpendLevel NUMBER SEMICOLON

  76  attraction_name : ID

  77  crowd_name : ID

  78  function_name : ID

  79  land_name : ID

  80  park_name : ID

  81  restaurant_name : ID

  82  store_name : ID

  83  variable_name : ID

  84  empty :

state 0
	$accept : . program $end  (0)
	empty : .  (84)

	.  reduce 84

	program  goto 1
	definitions  goto 2
	crowd_definitions  goto 3
	empty  goto 4


state 1
	$accept : program . $end  (0)

	$end  accept


state 2
	program : definitions . usercode  (1)
	empty : .  (84)

	.  reduce 84

	usercode  goto 5
	empty  goto 6


state 3
	definitions : crowd_definitions . park_definition crowd_definitions  (2)
	crowd_definitions : crowd_definitions . crowd_definition  (3)

	Crowd  shift 7
	Park  shift 8
	.  error

	park_definition  goto 9
	crowd_definition  goto 10


state 4
	crowd_definitions : empty .  (4)

	.  reduce 4


state 5
	program : definitions usercode .  (1)

	.  reduce 1


state 6
	usercode : empty .  (5)

	.  reduce 5


state 7
	crowd_definition : Crowd . crowd_name crowd_elements  (6)

	ID  shift 11
	.  error

	crowd_name  goto 12


state 8
	park_definition : Park . park_name park_elements land_definitions  (19)

	ID  shift 13
	.  error

	park_name  goto 14


state 9
	definitions : crowd_definitions park_definition . crowd_definitions  (2)
	empty : .  (84)

	.  reduce 84

	crowd_definitions  goto 15
	empty  goto 4


state 10
	crowd_definitions : crowd_definitions crowd_definition .  (3)

	.  reduce 3


state 11
	crowd_name : ID .  (77)

	.  reduce 77


state 12
	crowd_definition : Crowd crowd_name . crowd_elements  (6)
	empty : .  (84)

	SEMICOLON  shift 16
	$end  reduce 84
	Crowd  reduce 84
	Park  reduce 84
	Set  reduce 84

	empty  goto 17
	crowd_elements  goto 18
	crowd_attributes  goto 19


state 13
	park_name : ID .  (80)

	.  reduce 80


state 14
	park_definition : Park park_name . park_elements land_definitions  (19)
	empty : .  (84)

	SEMICOLON  shift 20
	$end  reduce 84
	Crowd  reduce 84
	Land  reduce 84
	Set  reduce 84

	empty  goto 21
	park_elements  goto 22
	park_attributes  goto 23


state 15
	definitions : crowd_definitions park_definition crowd_definitions .  (2)
	crowd_definitions : crowd_definitions . crowd_definition  (3)

	Crowd  shift 7
	$end  reduce 2

	crowd_definition  goto 10


state 16
	crowd_elements : SEMICOLON .  (7)

	.  reduce 7


state 17
	crowd_attributes : empty .  (10)

	.  reduce 10


state 18
	crowd_definition : Crowd crowd_name crowd_elements .  (6)

	.  reduce 6


state 19
	crowd_elements : crowd_attributes .  (8)
	crowd_attributes : crowd_attributes . crowd_attribute  (9)

	Set  shift 24
	$end  reduce 8
	Crowd  reduce 8
	Park  reduce 8

	crowd_attribute  goto 25
	c1  goto 26
	c2  goto 27
	c3  goto 28
	c4  goto 29


state 20
	park_elements : SEMICOLON .  (20)

	.  reduce 20


state 21
	park_attributes : empty .  (23)

	.  reduce 23


state 22
	park_definition : Park park_name park_elements . land_definitions  (19)
	empty : .  (84)

	.  reduce 84

	empty  goto 30
	land_definitions  goto 31


state 23
	park_elements : park_attributes .  (21)
	park_attributes : park_attributes . park_attribute  (22)

	Set  shift 32
	$end  reduce 21
	Crowd  reduce 21
	Land  reduce 21

	park_attribute  goto 33
	p1  goto 34
	p2  goto 35
	p3  goto 36


state 24
	c1 : Set . SpendingCapacity NUMBER SEMICOLON  (15)
	c2 : Set . Size NUMBER SEMICOLON  (16)
	c3 : Set . EnergyLevel NUMBER SEMICOLON  (17)
	c4 : Set . ThrillLevel NUMBER SEMICOLON  (18)

	EnergyLevel  shift 37
	Size  shift 38
	SpendingCapacity  shift 39
	ThrillLevel  shift 40
	.  error


state 25
	crowd_attributes : crowd_attributes crowd_attribute .  (9)

	.  reduce 9


state 26
	crowd_attribute : c1 .  (11)

	.  reduce 11


state 27
	crowd_attribute : c2 .  (12)

	.  reduce 12


state 28
	crowd_attribute : c3 .  (13)

	.  reduce 13


state 29
	crowd_attribute : c4 .  (14)

	.  reduce 14


state 30
	land_definitions : empty .  (31)

	.  reduce 31


state 31
	park_definition : Park park_name park_elements land_definitions .  (19)
	land_definitions : land_definitions . land_definition  (30)

	Land  shift 41
	$end  reduce 19
	Crowd  reduce 19

	land_definition  goto 42


state 32
	p1 : Set . Admission NUMBER SEMICOLON  (27)
	p2 : Set . Capacity NUMBER SEMICOLON  (28)
	p3 : Set . Cost NUMBER SEMICOLON  (29)

	Admission  shift 43
	Capacity  shift 44
	Cost  shift 45
	.  error


state 33
	park_attributes : park_attributes park_attribute .  (22)

	.  reduce 22


state 34
	park_attribute : p1 .  (24)

	.  reduce 24


state 35
	park_attribute : p2 .  (25)

	.  reduce 25


state 36
	park_attribute : p3 .  (26)

	.  reduce 26


state 37
	c3 : Set EnergyLevel . NUMBER SEMICOLON  (17)

	NUMBER  shift 46
	.  error


state 38
	c2 : Set Size . NUMBER SEMICOLON  (16)

	NUMBER  shift 47
	.  error


state 39
	c1 : Set SpendingCapacity . NUMBER SEMICOLON  (15)

	NUMBER  shift 48
	.  error


state 40
	c4 : Set ThrillLevel . NUMBER SEMICOLON  (18)

	NUMBER  shift 49
	.  error


state 41
	land_definition : Land . land_name land_attributes land_elements  (32)

	ID  shift 50
	.  error

	land_name  goto 51


state 42
	land_definitions : land_definitions land_definition .  (30)

	.  reduce 30


state 43
	p1 : Set Admission . NUMBER SEMICOLON  (27)

	NUMBER  shift 52
	.  error


state 44
	p2 : Set Capacity . NUMBER SEMICOLON  (28)

	NUMBER  shift 53
	.  error


state 45
	p3 : Set Cost . NUMBER SEMICOLON  (29)

	NUMBER  shift 54
	.  error


state 46
	c3 : Set EnergyLevel NUMBER . SEMICOLON  (17)

	SEMICOLON  shift 55
	.  error


state 47
	c2 : Set Size NUMBER . SEMICOLON  (16)

	SEMICOLON  shift 56
	.  error


state 48
	c1 : Set SpendingCapacity NUMBER . SEMICOLON  (15)

	SEMICOLON  shift 57
	.  error


state 49
	c4 : Set ThrillLevel NUMBER . SEMICOLON  (18)

	SEMICOLON  shift 58
	.  error


state 50
	land_name : ID .  (79)

	.  reduce 79


state 51
	land_definition : Land land_name . land_attributes land_elements  (32)

	Set  shift 59
	.  error

	land_attributes  goto 60


state 52
	p1 : Set Admission NUMBER . SEMICOLON  (27)

	SEMICOLON  shift 61
	.  error


state 53
	p2 : Set Capacity NUMBER . SEMICOLON  (28)

	SEMICOLON  shift 62
	.  error


state 54
	p3 : Set Cost NUMBER . SEMICOLON  (29)

	SEMICOLON  shift 63
	.  error


state 55
	c3 : Set EnergyLevel NUMBER SEMICOLON .  (17)

	.  reduce 17


state 56
	c2 : Set Size NUMBER SEMICOLON .  (16)

	.  reduce 16


state 57
	c1 : Set SpendingCapacity NUMBER SEMICOLON .  (15)

	.  reduce 15


state 58
	c4 : Set ThrillLevel NUMBER SEMICOLON .  (18)

	.  reduce 18


state 59
	land_attributes : Set . Location NUMBER SEMICOLON  (33)

	Location  shift 64
	.  error


state 60
	land_definition : Land land_name land_attributes . land_elements  (32)
	empty : .  (84)

	.  reduce 84

	empty  goto 65
	land_elements  goto 66


state 61
	p1 : Set Admission NUMBER SEMICOLON .  (27)

	.  reduce 27


state 62
	p2 : Set Capacity NUMBER SEMICOLON .  (28)

	.  reduce 28


state 63
	p3 : Set Cost NUMBER SEMICOLON .  (29)

	.  reduce 29


state 64
	land_attributes : Set Location . NUMBER SEMICOLON  (33)

	NUMBER  shift 67
	.  error


state 65
	land_elements : empty .  (35)

	.  reduce 35


state 66
	land_definition : Land land_name land_attributes land_elements .  (32)
	land_elements : land_elements . land_element  (34)

	Attraction  shift 68
	Restaurant  shift 69
	Store  shift 70
	$end  reduce 32
	Crowd  reduce 32
	Land  reduce 32

	land_element  goto 71
	attraction_definition  goto 72
	restaurant_definition  goto 73
	store_definition  goto 74


state 67
	land_attributes : Set Location NUMBER . SEMICOLON  (33)

	SEMICOLON  shift 75
	.  error


state 68
	attraction_definition : Attraction . attraction_name In land_name attraction_attributes SEMICOLON  (39)

	ID  shift 76
	.  error

	attraction_name  goto 77


state 69
	restaurant_definition : Restaurant . restaurant_name In land_name restaurant_attributes SEMICOLON  (52)

	ID  shift 78
	.  error

	restaurant_name  goto 79


state 70
	store_definition : Store . store_name In land_name store_attributes SEMICOLON  (65)

	ID  shift 80
	.  error

	store_name  goto 81


state 71
	land_elements : land_elements land_element .  (34)

	.  reduce 34


state 72
	land_element : attraction_definition .  (36)

	.  reduce 36


state 73
	land_element : restaurant_definition .  (37)

	.  reduce 37


state 74
	land_element : store_definition .  (38)

	.  reduce 38


state 75
	land_attributes : Set Location NUMBER SEMICOLON .  (33)

	.  reduce 33


state 76
	attraction_name : ID .  (76)

	.  reduce 76


state 77
	attraction_definition : Attraction attraction_name . In land_name attraction_attributes SEMICOLON  (39)

	In  shift 82
	.  error


state 78
	restaurant_name : ID .  (81)

	.  reduce 81


state 79
	restaurant_definition : Restaurant restaurant_name . In land_name restaurant_attributes SEMICOLON  (52)

	In  shift 83
	.  error


state 80
	store_name : ID .  (82)

	.  reduce 82


state 81
	store_definition : Store store_name . In land_name store_attributes SEMICOLON  (65)

	In  shift 84
	.  error


state 82
	attraction_definition : Attraction attraction_name In . land_name attraction_attributes SEMICOLON  (39)

	ID  shift 50
	.  error

	land_name  goto 85


state 83
	restaurant_definition : Restaurant restaurant_name In . land_name restaurant_attributes SEMICOLON  (52)

	ID  shift 50
	.  error

	land_name  goto 86


state 84
	store_definition : Store store_name In . land_name store_attributes SEMICOLON  (65)

	ID  shift 50
	.  error

	land_name  goto 87


state 85
	attraction_definition : Attraction attraction_name In land_name . attraction_attributes SEMICOLON  (39)
	empty : .  (84)

	.  reduce 84

	empty  goto 88
	attraction_attributes  goto 89


state 86
	restaurant_definition : Restaurant restaurant_name In land_name . restaurant_attributes SEMICOLON  (52)
	empty : .  (84)

	.  reduce 84

	empty  goto 90
	restaurant_attributes  goto 91


state 87
	store_definition : Store store_name In land_name . store_attributes SEMICOLON  (65)
	empty : .  (84)

	.  reduce 84

	empty  goto 92
	store_attributes  goto 93


state 88
	attraction_attributes : empty .  (41)

	.  reduce 41


state 89
	attraction_definition : Attraction attraction_name In land_name attraction_attributes . SEMICOLON  (39)
	attraction_attributes : attraction_attributes . attraction_attribute  (40)

	SEMICOLON  shift 94
	Set  shift 95
	.  error

	attraction_attribute  goto 96
	a1  goto 97
	a2  goto 98
	a3  goto 99
	a4  goto 100
	a5  goto 101


state 90
	restaurant_attributes : empty .  (54)

	.  reduce 54


state 91
	restaurant_definition : Restaurant restaurant_name In land_name restaurant_attributes . SEMICOLON  (52)
	restaurant_attributes : restaurant_attributes . restaurant_attribute  (53)

	SEMICOLON  shift 102
	Set  shift 103
	.  error

	restaurant_attribute  goto 104
	r1  goto 105
	r2  goto 106
	r3  goto 107
	r4  goto 108
	r5  goto 109


state 92
	store_attributes : empty .  (67)

	.  reduce 67


state 93
	store_definition : Store store_name In land_name store_attributes . SEMICOLON  (65)
	store_attributes : store_attributes . store_attribute  (66)

	SEMICOLON  shift 110
	Set  shift 111
	.  error

	store_attribute  goto 112
	s1  goto 113
	s2  goto 114
	s3  goto 115
	s4  goto 116


state 94
	attraction_definition : Attraction attraction_name In land_name attraction_attributes SEMICOLON .  (39)

	.  reduce 39


state 95
	a1 : Set . Cost NUMBER SEMICOLON  (47)
	a2 : Set . Capacity NUMBER SEMICOLON  (48)
	a3 : Set . Employees NUMBER SEMICOLON  (49)
	a4 : Set . ThrillLevel NUMBER SEMICOLON  (50)
	a5 : Set . EnergyLost NUMBER SEMICOLON  (51)

	Capacity  shift 117
	Cost  shift 118
	Employees  shift 119
	EnergyLost  shift 120
	ThrillLevel  shift 121
	.  error


state 96
	attraction_attributes : attraction_attributes attraction_attribute .  (40)

	.  reduce 40


state 97
	attraction_attribute : a1 .  (42)

	.  reduce 42


state 98
	attraction_attribute : a2 .  (43)

	.  reduce 43


state 99
	attraction_attribute : a3 .  (44)

	.  reduce 44


state 100
	attraction_attribute : a4 .  (45)

	.  reduce 45


state 101
	attraction_attribute : a5 .  (46)

	.  reduce 46


state 102
	restaurant_definition : Restaurant restaurant_name In land_name restaurant_attributes SEMICOLON .  (52)

	.  reduce 52


state 103
	r1 : Set . Cost NUMBER SEMICOLON  (60)
	r2 : Set . Capacity NUMBER SEMICOLON  (61)
	r3 : Set . Employees NUMBER SEMICOLON  (62)
	r4 : Set . SpendLevel NUMBER SEMICOLON  (63)
	r5 : Set . EnergyIncrease NUMBER SEMICOLON  (64)

	Capacity  shift 122
	Cost  shift 123
	Employees  shift 124
	EnergyIncrease  shift 125
	SpendLevel  shift 126
	.  error


state 104
	restaurant_attributes : restaurant_attributes restaurant_attribute .  (53)

	.  reduce 53


state 105
	restaurant_attribute : r1 .  (55)

	.  reduce 55


state 106
	restaurant_attribute : r2 .  (56)

	.  reduce 56


state 107
	restaurant_attribute : r3 .  (57)

	.  reduce 57


state 108
	restaurant_attribute : r4 .  (58)

	.  reduce 58


state 109
	restaurant_attribute : r5 .  (59)

	.  reduce 59


state 110
	store_definition : Store store_name In land_name store_attributes SEMICOLON .  (65)

	.  reduce 65


state 111
	s1 : Set . Cost NUMBER SEMICOLON  (72)
	s2 : Set . Capacity NUMBER SEMICOLON  (73)
	s3 : Set . Employees NUMBER SEMICOLON  (74)
	s4 : Set . SpendLevel NUMBER SEMICOLON  (75)

	Capacity  shift 127
	Cost  shift 128
	Employees  shift 129
	SpendLevel  shift 130
	.  error


state 112
	store_attributes : store_attributes store_attribute .  (66)

	.  reduce 66


state 113
	store_attribute : s1 .  (68)

	.  reduce 68


state 114
	store_attribute : s2 .  (69)

	.  reduce 69


state 115
	store_attribute : s3 .  (70)

	.  reduce 70


state 116
	store_attribute : s4 .  (71)

	.  reduce 71


state 117
	a2 : Set Capacity . NUMBER SEMICOLON  (48)

	NUMBER  shift 131
	.  error


state 118
	a1 : Set Cost . NUMBER SEMICOLON  (47)

	NUMBER  shift 132
	.  error


state 119
	a3 : Set Employees . NUMBER SEMICOLON  (49)

	NUMBER  shift 133
	.  error


state 120
	a5 : Set EnergyLost . NUMBER SEMICOLON  (51)

	NUMBER  shift 134
	.  error


state 121
	a4 : Set ThrillLevel . NUMBER SEMICOLON  (50)

	NUMBER  shift 135
	.  error


state 122
	r2 : Set Capacity . NUMBER SEMICOLON  (61)

	NUMBER  shift 136
	.  error


state 123
	r1 : Set Cost . NUMBER SEMICOLON  (60)

	NUMBER  shift 137
	.  error


state 124
	r3 : Set Employees . NUMBER SEMICOLON  (62)

	NUMBER  shift 138
	.  error


state 125
	r5 : Set EnergyIncrease . NUMBER SEMICOLON  (64)

	NUMBER  shift 139
	.  error


state 126
	r4 : Set SpendLevel . NUMBER SEMICOLON  (63)

	NUMBER  shift 140
	.  error


state 127
	s2 : Set Capacity . NUMBER SEMICOLON  (73)

	NUMBER  shift 141
	.  error


state 128
	s1 : Set Cost . NUMBER SEMICOLON  (72)

	NUMBER  shift 142
	.  error


state 129
	s3 : Set Employees . NUMBER SEMICOLON  (74)

	NUMBER  shift 143
	.  error


state 130
	s4 : Set SpendLevel . NUMBER SEMICOLON  (75)

	NUMBER  shift 144
	.  error


state 131
	a2 : Set Capacity NUMBER . SEMICOLON  (48)

	SEMICOLON  shift 145
	.  error


state 132
	a1 : Set Cost NUMBER . SEMICOLON  (47)

	SEMICOLON  shift 146
	.  error


state 133
	a3 : Set Employees NUMBER . SEMICOLON  (49)

	SEMICOLON  shift 147
	.  error


state 134
	a5 : Set EnergyLost NUMBER . SEMICOLON  (51)

	SEMICOLON  shift 148
	.  error


state 135
	a4 : Set ThrillLevel NUMBER . SEMICOLON  (50)

	SEMICOLON  shift 149
	.  error


state 136
	r2 : Set Capacity NUMBER . SEMICOLON  (61)

	SEMICOLON  shift 150
	.  error


state 137
	r1 : Set Cost NUMBER . SEMICOLON  (60)

	SEMICOLON  shift 151
	.  error


state 138
	r3 : Set Employees NUMBER . SEMICOLON  (62)

	SEMICOLON  shift 152
	.  error


state 139
	r5 : Set EnergyIncrease NUMBER . SEMICOLON  (64)

	SEMICOLON  shift 153
	.  error


state 140
	r4 : Set SpendLevel NUMBER . SEMICOLON  (63)

	SEMICOLON  shift 154
	.  error


state 141
	s2 : Set Capacity NUMBER . SEMICOLON  (73)

	SEMICOLON  shift 155
	.  error


state 142
	s1 : Set Cost NUMBER . SEMICOLON  (72)

	SEMICOLON  shift 156
	.  error


state 143
	s3 : Set Employees NUMBER . SEMICOLON  (74)

	SEMICOLON  shift 157
	.  error


state 144
	s4 : Set SpendLevel NUMBER . SEMICOLON  (75)

	SEMICOLON  shift 158
	.  error


state 145
	a2 : Set Capacity NUMBER SEMICOLON .  (48)

	.  reduce 48


state 146
	a1 : Set Cost NUMBER SEMICOLON .  (47)

	.  reduce 47


state 147
	a3 : Set Employees NUMBER SEMICOLON .  (49)

	.  reduce 49


state 148
	a5 : Set EnergyLost NUMBER SEMICOLON .  (51)

	.  reduce 51


state 149
	a4 : Set ThrillLevel NUMBER SEMICOLON .  (50)

	.  reduce 50


state 150
	r2 : Set Capacity NUMBER SEMICOLON .  (61)

	.  reduce 61


state 151
	r1 : Set Cost NUMBER SEMICOLON .  (60)

	.  reduce 60


state 152
	r3 : Set Employees NUMBER SEMICOLON .  (62)

	.  reduce 62


state 153
	r5 : Set EnergyIncrease NUMBER SEMICOLON .  (64)

	.  reduce 64


state 154
	r4 : Set SpendLevel NUMBER SEMICOLON .  (63)

	.  reduce 63


state 155
	s2 : Set Capacity NUMBER SEMICOLON .  (73)

	.  reduce 73


state 156
	s1 : Set Cost NUMBER SEMICOLON .  (72)

	.  reduce 72


state 157
	s3 : Set Employees NUMBER SEMICOLON .  (74)

	.  reduce 74


state 158
	s4 : Set SpendLevel NUMBER SEMICOLON .  (75)

	.  reduce 75


Rules never reduced:
	function_name : ID  (78)
	variable_name : ID  (83)


66 terminals, 57 nonterminals
85 grammar rules, 159 states
